--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # Java class files
 *.class
 
-# Generated files
+# Generated files.
 bin/
 gen/
 
@@ -25,3 +25,11 @@ proguard/
 
 # Log Files
 *.log
+
+/build
+/products
+.gradle
+/.idea/workspace.xml
+.DS_Store
+.idea
+*.iml
